--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <span class="text-primary text-primary--bold"
               >A frontend developer</span
             >
-            + more, from
-			Malta. I build beautiful and functional user interfaces,
+            + more.
+			 I build beautiful and functional user interfaces,
             whilst writing clean and efficient code.
           </p>
         </div>
