--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Kenny | Dev</title>
     <meta property="og:title" content="Hey! I'm kenny 👋" />
     <meta property="og:description" content="This is my personal website, including all  my projects, an about me, and contact info! :D" />
+    <meta property="og:image" content="https://kenny.is-a.dev/assets/images/kenny-profile.png" />
+    <meta property="og:image:secure_url" content="https://kenny.is-a.dev/assets/images/kenny-profile.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image:alt" content="Kenny Bugeja" />
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
