--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="theme-color" content="#617fe8">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kenny | Dev</title>
@@ -12,7 +13,7 @@
     <meta property="og:image:secure_url" content="https://kenny.is-a.dev/assets/images/kenny-profile.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="900" />
+    <meta property="og:image:height" content="600" />
     <meta property="og:image:alt" content="Kenny Bugeja" />
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
