--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://kk-designs.github.io/dark-mode/dark-mode.css">
+    <script src="https://kk-designs.github.io/dark-mode/dark-mode.js"></script>
     <meta name="theme-color" content="#617fe8">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -92,6 +94,7 @@
 			 I build beautiful and functional user interfaces,
             whilst writing clean and efficient code.
           </p>
+          <button onclick='changeToDarkMode();'>Toggle dark mode</button>
         </div>
         <ul class="hero-social">
           <li>
