--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 			
 			<div class="skills__data" data-sr-id="21">
               <div class="skills__names">
-                <box-icon type='logo' name='typescript'></box-icon>
+                <i class="bx bxl-typescript skills__icon"></i>
                 <span class="skills__name">TYPESCRIPT</span>
               </div>
 
