--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           <div>
             <h2 class="about__subtitle">I am Kenny</h2>
             <p class="about__text">
-			I am a self thought developer, which makes a bunch of different things,
+			I am a self taught developer, which makes a bunch of different things,
 			if you want to contact me, send me an email: kenny@kenny.is-a.dev
 			or DM me on discord using the discord links provided.
           </div>
