--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="theme-color" content="#6bb3eb">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kenny | Dev</title>
+    <title>Kenny | DEV</title>
     <meta property="og:title" content="Hey! I'm kenny 👋" />
     <meta property="og:site_name" content="KennyDEV" />
     <meta property="og:url" content="https://kenny.is-a.dev" />
@@ -45,7 +45,7 @@
       <nav class="nav bd-grid">
         <div>
           <h1 class="header__logo">
-            Kenny<span class="header__logo--light">Dev</span>
+            Kenny<span class="header__logo--light">DEV</span>
           </h1>
         </div>
         <!-- ===== NAVIGATION ===== -->
@@ -273,7 +273,7 @@
     <footer class="footer" id="footer">
       <div class="footer-content">
         <p class="header__logo">
-          Kenny<span class="header__logo--light">Dev</span>
+          Kenny<span class="header__logo--light">DEV</span>
         </p>
 
         <div class="footer__social">
