--- a/index.html
+++ b/index.html
@@ -143,25 +143,29 @@
 				just to do simple tasks, so I decided to create a
 				revolutionary Discord Bot, which includes all
 				your needs in one bot!
+		                DISCLAIMER: THE COMMANDS SHOWN ON THE IMAGE
+                                IS NOT UPDATED, PLEASE CHECK THE LATEST
+		                COMMANDS FROM THE SITE!
               </p>
             </div>
             <div class="project-links">
               <a
                 target="_blank"
                 rel="noopener nofollow"
-                href="https://zync.is-an.app"
+                href="#"
                 class="project-links__anchor"
               >
                 <i class="bx bx-link-external project-icon"></i>
-                Demo
+                Site (WIP)
               </a>
               <a
                 target="_blank"
                 rel="noopener nofollow"
+		href="https://github.com/KennySB-dev/zync"
                 class="project-links__anchor"
               >
                 <i class="bx bx-folder project-icon"></i>
-                Private
+                Repository
               </a>
             </div>
           </figure>
