--- a/index.html
+++ b/index.html
@@ -266,8 +266,7 @@
             <h2 class="about__subtitle">I am Kenny</h2>
             <p class="about__text">
 			I am a self taught developer, which makes a bunch of different things,
-			if you want to contact me, send me an email: kenny@kenny.is-a.dev
-			or DM me on discord using the discord links provided.
+			if you want to contact me, DM me on discord using the discord links provided.
           </div>
         </div>
       </section>
