--- a/fc/index.html
+++ b/fc/index.html
@@ -46,13 +46,7 @@
               <a href="#home" class="nav__link"> Home </a>
             </li>
             <li class="nav__item">
-              <a href="#work" class="nav__link"> Work </a>
-            </li>
-            <li class="nav__item">
-              <a href="#skills" class="nav__link"> Skills </a>
-            </li>
-            <li class="nav__item">
-              <a href="#about" class="nav__link"> About </a>
+              <a href="#work" class="nav__link"> Our Work </a>
             </li>
           </ul>
         </div>
