--- a/fc/index.html
+++ b/fc/index.html
@@ -220,7 +220,7 @@
             ><i class="bx bxl-gmail footer__social-icon"></i
           ></a>
         </div>
-        <p class="footer-description"></p>
+        <p class="footer-description">Renald Bugeja</p>
       </div>
     </footer>
   </body>
