--- a/fc/index.html
+++ b/fc/index.html
@@ -54,7 +54,7 @@
         <button
           class="menu-btn"
           aria-label="Navigation menu"
-          aria-expanded="false"
+          aria-expanded="true"
         >
           <div class="menu-btn__icon"></div>
         </button>
@@ -65,7 +65,7 @@
       <section class="hero bd-grid" id="home">
         <div class="hero-description">
           <h2 class="hero-description__title">
-            <span class="text-primary">Future Communications,</span>
+            <span class="text-primary">Future Communications</span>
           </h2>
           <p class="hero-description__subtitle">
             <span class="text-primary text-primary--bold"
