--- a/fc/index.html
+++ b/fc/index.html
@@ -48,6 +48,12 @@
             <li class="nav__item">
               <a href="#work" class="nav__link"> Our Work </a>
             </li>
+            <li class="nav__item">
+              <a href="/radios" class="nav__link"> In-store Radios </a>
+            </li>
+	    <li class="nav__item">
+              <a target="_blank" rel="noopener nofollow" href="https://minicards.com" class="nav__link"> Minicards </a>
+            </li>
           </ul>
         </div>
 
@@ -177,8 +183,6 @@
             </div>
             <div class="project-links">
               <a
-                target="_blank"
-                rel="noopener nofollow"
                 href="/radios"
                 class="project-links__anchor"
               >
