--- a/fc/index.html
+++ b/fc/index.html
@@ -77,7 +77,12 @@
             <span class="text-primary text-primary--bold"
               >Your marketing partner.</span
             >
-			 More info goes here....
+			 A new company employing experienced professionals
+in the media sector, marketing, public relations, entertainment and other relevant
+fields of communication.
+Our aim is to provide new innovative tools to help our clients maximize their
+company's sales by maximizing the project values. Future Communications strives to
+bring innovative ideas to our islands.
           </p>
         </div>
         <ul class="hero-social">
