--- a/fc/index.html
+++ b/fc/index.html
@@ -49,7 +49,7 @@
               <a href="#work" class="nav__link"> Our Work </a>
             </li>
             <li class="nav__item">
-              <a href="/radios" class="nav__link"> In-store Radios </a>
+              <a href="/radios" class="nav__link"> Corporate (In-store) Radios </a>
             </li>
 	    <li class="nav__item">
               <a target="_blank" rel="noopener nofollow" href="https://minicards.com" class="nav__link"> Minicards </a>
@@ -172,18 +172,21 @@ bring innovative ideas to our islands.
           </figure>
 
           <figure class="project-card">
-            <h3 class="project-card__title">In-store Radios</h3>
+            <h3 class="project-card__title">Corporate (In-store) Radios</h3>
             <div class="project-picture">
               <img
-                src="./assets/images/radios.png"
+                src="./assets/images/radio.png"
                 alt="Radios"
               />
             </div>
             <div class="project-description">
               <p class="project-description__text">
-                In-store radios!
+                A successful and entertaining sales tool!
                 <br />
-                In-store radios allow you to... 
+                Now it’s the time to have your own in-house radio station,
+		broadcasting in your shops only what’s best for your clients and market.
+                Corporate Radio will not only entertain your clients and staff but it
+		will also be a successful sales tool.
               </p>
             </div>
             <div class="project-links">
