--- a/fc/index.html
+++ b/fc/index.html
@@ -181,7 +181,7 @@ bring innovative ideas to our islands.
             </div>
             <div class="project-description">
               <p class="project-description__text">
-                A successful and entertaining sales tool!
+                A successful & entertaining sales tool!
                 <br />
                 Now it’s the time to have your own in-house radio station,
 		broadcasting in your shops only what’s best for your clients and market.
