--- a/fc/index.html
+++ b/fc/index.html
@@ -75,11 +75,8 @@
           </h2>
           <p class="hero-description__subtitle">
             <span class="text-primary text-primary--bold"
-              >Your marketing partner.</span
+              >Your ideal marketing partner.</span
             >
-			 A new company employing experienced professionals
-in the media sector, marketing, public relations, entertainment and other relevant
-fields of communication.
 Our aim is to provide new innovative tools to help our clients maximize their
 company's sales by maximizing the project values. Future Communications strives to
 bring innovative ideas to our islands.
