--- a/fc/index.html
+++ b/fc/index.html
@@ -130,7 +130,7 @@ bring innovative ideas to our islands.
             <h3 class="project-card__title">Minicards Malta</h3>
             <div class="project-picture">
               <img
-                src="assets/images/zync-web.png"
+                src="assets/images/minicards.png"
                 alt="Zync"
               />
             </div>
