--- a/index.html
+++ b/index.html
@@ -143,19 +143,19 @@
 				just to do simple tasks, so I decided to create a
 				revolutionary Discord Bot, which includes all
 				your needs in one bot!
-		                DISCLAIMER: THE COMMANDS SHOWN ON THE IMAGE
-                                IS NOT UPDATED, PLEASE CHECK THE LATEST
-		                COMMANDS FROM THE SITE!
+		                For a command list, please check the "/help"
+                                command, as the image above isn't updated.
               </p>
             </div>
             <div class="project-links">
               <a
                 target="_blank"
-                href="#"
+                rel="noopener nofollow"
+		href="https://zync.kennysb.xyz"
                 class="project-links__anchor"
               >
                 <i class="bx bx-link-external project-icon"></i>
-                Site (WIP)
+                Site
               </a>
               <a
                 target="_blank"
