--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
         <!-- ===== THEME SWITCHER ===== -->
         <div class="theme-switcher">
           <input type="checkbox" id="theme-toggle" aria-label="Theme switcher">
-          <label for="theme-toggle">Dark Mode</label>
+          <label for="theme-toggle">
+            <div class="slider"></div>
+            Dark Mode
+          </label>
         </div>
-      </nav>
-    </header>
     <!-- ===== MAIN NAVIGATOR SECTIONS ===== -->
     <main>
       <section class="hero bd-grid" id="home">
