--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kenny | DEV</title>
+  <title>Kenny | DEV</title>    
+  <meta property="og:title" content="Hey! I'm kenny 👋" />
+  <meta property="og:site_name" content="KennyDEV" />
+  <meta property="og:url" content="https://kenny.is-a.dev" />
+  <meta property="og:description" content="This is my personal website, including all  my projects, an about me, and contact info! :D" />
+  <meta property="og:image" content="https://kenny.is-a.dev/assets/images/kenny-profile.png" />
+  <meta property="og:image:secure_url" content="https://kenny.is-a.dev/assets/images/kenny-profile.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:alt" content="Kenny Bugeja" />
+  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/tablet.css" media="screen and (min-width: 55em)" />
   <link rel="stylesheet" href="assets/css/desktop.css" media="screen and (min-width: 65em)" />
