--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ input:checked + .slider:before {
       <!-- ===== THEME SWITCHER ===== -->
 <label class="theme-switcher">
     <input type="checkbox">
+    <label for="theme-toggle">
     <span class="slider"></span>
 </label>
     </nav>
