--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ input:checked + .slider:before {
 
       <!-- ===== THEME SWITCHER ===== -->
 <label class="theme-switcher">
-    <input type="checkbox">
+    <input type="checkbox" id="theme-toggle" aria-label="Theme switcher">
     <label for="theme-toggle">
     <span class="slider"></span>
 </label>
