--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <meta property="og:image:alt" content="Kenny Bugeja" />
   <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+  />
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/tablet.css" media="screen and (min-width: 55em)" />
   <link rel="stylesheet" href="assets/css/desktop.css" media="screen and (min-width: 65em)" />
